# Lura

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  PROGRESS.md  README.md  entities.json  install-preview.sh  mempalace.yaml
docs/: GRAPHICS_ROADMAP.md  PREVIEW_FIRST_OPEN.md  PRODUCT_DECISIONS.md  SPEC.md
docs/superpowers/plans/: 2026-04-09-block-id.md  2026-04-09-cli.md  2026-04-17-phase-a-fileopen.md
docs/superpowers/specs/: 2026-04-09-block-id-design.md  2026-04-09-cli-design.md  2026-04-17-ui-perf-fileopen-design.md
examples/: hello.fol  showcase-large.fol  showcase-large.lura  vertragszusammenfassung.fol
quicklook/: ExtensionInfo.plist  HostInfo.plist
quicklook/Extension/: PreviewViewController.swift
quicklook/HostApp/: FolioRenderFFI.swift  LuraApp.swift  LuraAppDelegate.swift  LuraAppModel.swift  LuraDebugLog.swift  LuraEditorView.swift  LuraFileDocument.swift  LuraRenderFFI.swift  LuraTemplates.swift  PDFPreviewRepresentable.swift  RecentFilesStore.swift  WebPreviewRepresentable.swift  WelcomeView.swift  main.swift
quicklook/Shared/: LuraPdfFFI.swift  LuraPreviewDiskCache.swift  LuraPreviewSidecar.swift
src/: cli.rs  lib.rs  main.rs
src/engine/: arena.rs  counters.rs  grid_tracks.rs  introspection.rs  layout.rs  mod.rs  paginate.rs  pipeline_tests.rs  resolver.rs  styles.rs  text.rs
src/engine/backend/: mod.rs  painter.rs  pdf.rs  svg.rs  wgpu.rs
src/engine/backend/wgpu/: mod.rs  render.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/parser/: ast.rs  id.rs  mod.rs  resolver.rs  tests.rs
src/renderer/: html.rs  json.rs  mod.rs  pdf.rs  text.rs
tests/: export_parity.rs  inline_layout.rs
