[package]
name = "folio"
version = "0.1.0"
edition = "2024"

[features]
default = []
wgpu-preview = []

[dependencies]
clap = { version = "4", features = ["derive"] }
fontdb = "0.23.0"
id-arena = "2.3.0"
pdf-writer = "0.14.0"
taffy = "0.10.0"
textwrap = "0.16.1"
ttf-parser = "0.24"
unicode-linebreak = "0.1.5"
rustybuzz = "0.20.1"

[lib]
name = "folio"
crate-type = ["cdylib", "rlib"]
