[package]
name = "folio"
version = "0.1.0"
edition = "2024"

[features]
default = []
wgpu-preview = [
  "dep:wgpu",
  "dep:pollster",
  "dep:image",
  "dep:glyphon",
  "dep:bytemuck",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
fontdb = "0.23.0"
id-arena = "2.3.0"
pdf-writer = "0.14.0"
taffy = "0.10.0"
textwrap = "0.16.1"
ttf-parser = "0.24"
unicode-linebreak = "0.1.5"
rustybuzz = "0.20.1"

wgpu = { version = "28", optional = true, default-features = true, features = ["wgsl"] }
pollster = { version = "0.4", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
glyphon = { version = "0.10", optional = true }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }

[lib]
name = "folio"
crate-type = ["cdylib", "rlib"]
